--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0",
+    "reactn": "^2.2.4",
     "semantic-ui-react": "^0.88.1"
   },
   "scripts": {
