--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "chart.js": "^2.9.3",
     "fomantic-ui-css": "^2.8.2",
+    "jquery": "^3.4.1",
     "lodash": "^4.17.15",
+    "node-sass": "^4.13.0",
     "react": "^16.12.0",
+    "react-chartjs-2": "^2.8.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0",
     "reactn": "^2.2.4",
